-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

11/4/14
    - Modified behavior so setting out.all option to 0 is now ignored
      for pretty-printed output to files specified as FNAME argument
      to runpf(), runopf(), etc.

10/22/14
    - Removed idx_area() and all code references to 'areas' field
      in MATPOWER cases except those needed to support reading
      v1 case files and those required for backward compatibility of
      APIs. Removed unused (and formerly deprecated) 'areas' field from
      version 2 case files that still included it.

10/21/14
    - Fixed a bug in savecase() where a gencost matrix with extra
      columns of zeros resulted in a corrupted MATPOWER case file.
    - Modified total_load() to return actual rather than nominal
      value for dispatchable loads by default, unless using the
      old-style string input for the 4th input arg. See
      'help total_load' for details.

10/16/14
    - Reactive power output of multiple generators at a PQ bus
      no longer get re-allocated when running a power flow.

10/11/14
    - Added 'fmincon_ip', 'linprog_ds' and 'optimoptions' to
      have_fcn() to test for availability of fmincon's interior
      point method (Optimization Toolbox 4.x +), linprog's
      dual simplex method (Optimization Toolbox 7.1 +), and
      optimoptions function for setting Optimization Toolbox
      options (Optimization Toolbox 6.3 +), respectively.
    - Added handling of NaN values to t_is().
    - INCOMPATIBLE CHANGE: Removed use of 'ot_opts' field and
      replaced with 'linprog_opts' and 'quadprog_opts' fields
      in the OPT argument to qps_matpower() and qps_ot().