@@ -55,6 +55,7 @@ tests{end+1} = 't_hasPQcap';
 tests{end+1} = 't_mips';
 tests{end+1} = 't_qps_matpower';
 tests{end+1} = 't_pf';
+tests{end+1} = 't_get_losses';
 tests{end+1} = 't_cpf';
 tests{end+1} = 't_islands';
 tests{end+1} = 't_opf_model';
